// Custom Keyboard Builder - ERD con: Chat Realtime
// Lat cat nay dung de trinh bay chat Buyer-Seller va Seller-Admin.
// Buyer-Admin direct chat khong duoc tao.
// ERD full van la Documents/Custom_Keyboard_ERD.dbml.

Table users {
  user_id int [pk, increment]
  username varchar [unique]
  is_active boolean
}

Table seller_profiles {
  seller_profile_id int [pk, increment]
  user_id int [not null, ref: > users.user_id, unique]
  shop_name varchar
  is_verified boolean
}

Table build_requests {
  request_id varchar [pk]
  buyer_id int [not null, ref: > users.user_id]
  seller_user_id int [not null, ref: > users.user_id]
  status varchar
}

Table chat_conversations {
  conversation_id varchar [pk]
  seller_user_id int [not null, ref: > users.user_id]
  buyer_id int [ref: > users.user_id]
  admin_user_id int [ref: > users.user_id]
  build_request_id varchar [ref: > build_requests.request_id]
  created_at datetime
  updated_at datetime

  Note: 'Exactly one of buyer_id or admin_user_id must be set. Buyer-admin direct chat is not allowed.'
}

Table chat_messages {
  message_id varchar [pk]
  conversation_id varchar [not null, ref: > chat_conversations.conversation_id]
  sender_user_id int [not null, ref: > users.user_id]
  message_text text
  sent_at datetime
}
